Bug 322320 - adding contacts to kde telepathy
Summary: adding contacts to kde telepathy
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.6.2
Platform: openSUSE Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-13 18:58 UTC by Patrick "Finn" Robins
Modified: 2013-07-15 07:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick "Finn" Robins 2013-07-13 18:58:42 UTC
Application: ktp-contactlist (0.6.2)
KDE Platform Version: 4.10.3 "release 1"
Qt Version: 4.8.4
Operating System: Linux 3.10.0-16.g3dcd746-desktop x86_64
Distribution: "openSUSE 12.3 (x86_64)"

-- Information about the crash:
I clicked the add contacts button and kde telepathy crashed. Presence icon still showing in task bar and i can reopen the KDE IM Contacts window. Add contacts still not working

The crash can be reproduced sometimes.

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fbbd4f06840 (LWP 8436))]

Thread 3 (Thread 0x7fbbc0894700 (LWP 8437)):
#0  0x00007fbbd0d8b87d in poll () from /lib64/libc.so.6
#1  0x00007fbbcda1baa4 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fbbcda1bbc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fbbc08d0e9d in ?? () from /usr/lib64/gio/modules/libdconfsettings.so
#4  0x00007fbbcda3f345 in ?? () from /usr/lib64/libglib-2.0.so.0
#5  0x00007fbbcee3fe0f in start_thread () from /lib64/libpthread.so.0
#6  0x00007fbbd0d947dd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fbbbbfff700 (LWP 8438)):
#0  0x00007fbbd0d8b87d in poll () from /lib64/libc.so.6
#1  0x00007fbbcda1baa4 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fbbcda1bf02 in g_main_loop_run () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fbbcd4faba6 in ?? () from /usr/lib64/libgio-2.0.so.0
#4  0x00007fbbcda3f345 in ?? () from /usr/lib64/libglib-2.0.so.0
#5  0x00007fbbcee3fe0f in start_thread () from /lib64/libpthread.so.0
#6  0x00007fbbd0d947dd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fbbd4f06840 (LWP 8436)):
[KCrash Handler]
#5  Tp::AccountSet::Private::init (this=0x1c92b90) at /usr/src/debug/telepathy-qt4-0.9.3/TelepathyQt/account-set.cpp:69
#6  0x00007fbbd4776ba3 in Tp::AccountSet::Private::Private (this=0x1c92b90, parent=<optimized out>, accountManager=..., filter=...) at /usr/src/debug/telepathy-qt4-0.9.3/TelepathyQt/account-set.cpp:48
#7  0x00007fbbd4776c3a in Tp::AccountSet::AccountSet (this=0x22f5180, accountManager=..., filter=...) at /usr/src/debug/telepathy-qt4-0.9.3/TelepathyQt/account-set.cpp:322
#8  0x00007fbbd476d378 in Tp::AccountManager::filterAccounts (this=<optimized out>, filter=...) at /usr/src/debug/telepathy-qt4-0.9.3/TelepathyQt/account-manager.cpp:870
#9  0x00007fbbd3fe3b8f in KTp::AddContactDialog::AddContactDialog (this=0x1ee1e80, accountManager=..., parent=<optimized out>) at /usr/src/debug/ktp-common-internals-0.6.2/KTp/Widgets/add-contact-dialog.cpp:94
#10 0x000000000043cb40 in _start ()

Reported using DrKonqi
Comment 1 David Edmundson 2013-07-14 08:02:55 UTC
How often does it crash? every time? 1 time out of 5? less?

It works for me.

Are you using the standard SuSE packages? Or from some special source?
Comment 2 David Edmundson 2013-07-14 08:57:17 UTC
Git commit 1cabd0057655e4c9c193deceb21d45cdb4bc4987 by David Edmundson.
Committed on 14/07/2013 at 08:55.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Explicitly call Tp::Filter constructor

M  +1    -1    KTp/Widgets/add-contact-dialog.cpp

http://commits.kde.org/telepathy-common-internals/1cabd0057655e4c9c193deceb21d45cdb4bc4987
Comment 3 David Edmundson 2013-07-14 09:01:30 UTC
Git commit e1648e81896665dc397b3d94d3bb549387d8e41f by David Edmundson.
Committed on 14/07/2013 at 08:55.
Pushed by davidedmundson into branch 'master'.

Explicitly call Tp::Filter constructor

M  +1    -1    KTp/Widgets/add-contact-dialog.cpp

http://commits.kde.org/telepathy-common-internals/e1648e81896665dc397b3d94d3bb549387d8e41f
Comment 4 David Edmundson 2013-07-14 09:02:42 UTC
I've pushed a tidy-up on the relevant area of code. It /shouldn't/ make a difference unless there's a compiler issue.

Test it in 0.6.3 and report back.
Comment 5 Patrick "Finn" Robins 2013-07-15 00:41:13 UTC
On Sun, Jul 14, 2013 at 1:02 AM, David Edmundson
<kde@davidedmundson.co.uk>wrote:

> https://bugs.kde.org/show_bug.cgi?id=322320
>
> David Edmundson <kde@davidedmundson.co.uk> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|UNCONFIRMED                 |NEEDSINFO
>                  CC|                            |kde@davidedmundson.co.uk
>          Resolution|---                         |WAITINGFORINFO
>
> --- Comment #1 from David Edmundson <kde@davidedmundson.co.uk> ---
> How often does it crash? every time? 1 time out of 5? less?
>

Crashes roughly 50% of the time. ​​

>
> It works for me.
>
> Are you using the standard SuSE packages? Or from some special source?
>

using OpenSUSE Tumbleweed. ​​

>
> --
> You are receiving this mail because:
> You reported the bug.
>
Comment 6 David Edmundson 2013-07-15 07:12:36 UTC
Thanks.
Please reopen if you still get this after we release 0.6.3
Comment 7 Patrick "Finn" Robins 2013-07-15 07:45:12 UTC
will do.
On Jul 15, 2013 12:12 AM, "David Edmundson" <kde@davidedmundson.co.uk>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=322320
>
> --- Comment #6 from David Edmundson <kde@davidedmundson.co.uk> ---
> Thanks.
> Please reopen if you still get this after we release 0.6.3
>
> --
> You are receiving this mail because:
> You reported the bug.
>