Explicitly call Tp::Filter constructor

BUG: 322320